--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     
-    <main>
-        dib
+    <main class="main-container">
+        <h1> Stopwatch </h1>
+        <div class="display-timer">00:00:00</div>
+        
+        <div class="buttons">
+            <button id="start">Start</button>
+            <button id="stop">Stop</button>
+            <button id="reset">Reset</button>
+        </div>
     </main>
 </body>
 </html>
