all files updated

--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch App</title>
     <link rel="stylesheet" href="main.css">
-   <script src="main.js"></script>
 </head>
 <body>
     
     <main class="main-container">
-        <h1> Stopwatch </h1>
-        <div class="display-timer">00:00:00</div>
+        <h1> Stopwatch APP</h1>
+        <div class="display-timer">00:00:00:000</div>
         
         <div class="buttons">
             <button id="start">Start</button>
             <button id="stop">Stop</button>
             <button id="reset">Reset</button>
         </div>
+        <div>
+            <button id="themeToggle"> Toggle Theme</button>
+        </div>
+
+        <ul id="laps"> </ul>
     </main>
+     <script src="main.js"></script>
 </body>
 </html>
