--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stopwatch App</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <main class="main-container">
-        <h1> Stopwatch APP</h1>
-        <div class="display-timer">00:00:00:000</div>
-        
-        <div class="buttons">
-            <button id="start">Start</button>
-            <button id="stop">Stop</button>
-            <button id="reset">Reset</button>
-        </div>
-        <div>
-            <button id="themeToggle"> Toggle Theme</button>
-        </div>
+      <h1>Stopwatch APP</h1>
+      <div class="display-timer">00:00:00:000</div>
 
-        <ul id="laps"> </ul>
+      <div class="buttons">
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <button id="reset">Reset</button>
+      </div>
+      <div><button id="themeToggle">Toggle Theme</button></div>
     </main>
-     <script src="main.js"></script>
-</body>
+
+    <script src="main.js"></script>
+  </body>
 </html>
