--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
   </head>
   <body>
     <main class="main-container">
+
+        <!-- App heading -->
       <h1>Stopwatch APP</h1>
+
+
+      <!-- Timer display area showing the elapsed time -->
       <div class="display-timer">00:00:00:000</div>
 
+       <!-- Control buttons for starting, stopping, and resetting the timer -->
       <div class="buttons">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <button id="reset">Reset</button>
       </div>
+
+      <!-- Button to toggle between light and dark theme -->
       <div><button id="themeToggle">Toggle Theme</button></div>
     </main>
 
+     <!-- Links to external JavaScript file for stopwatch functionality -->
     <script src="main.js"></script>
   </body>
 </html>
