html and css files updated

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       <div><button id="themeToggle">Toggle Theme</button></div>
     </main>
 
+
+    <!-- Author Credit -->
+  <footer class="footer">
+    Designed and developed by <strong>Moshood Owolabi</strong>
+  </footer>
      <!-- Links to external JavaScript file for stopwatch functionality -->
     <script src="main.js"></script>
   </body>
