readme files updated

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     </main>
 
 
-    <!-- Author Credit -->
+    <!-- Author -->
   <footer class="footer">
     Designed and developed by <strong>Moshood Owolabi</strong>
   </footer>
+  
      <!-- Links to external JavaScript file for stopwatch functionality -->
     <script src="main.js"></script>
   </body>
